# ImgTrans

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
packaging/: imgtrans.spec
scripts/: build_desktop.py  install_local_e2e_models.py  release_hardening.py  run_customer_image_e2e.py  run_live_translation_check.py  verify_desktop_artifact.py
server/: __init__.py  __main__.py  app.py  config.py  main.py
src/: __init__.py  main.py
tasks/: TASK-001-project-plan.md  TASK-002-project-skeleton.md  TASK-003-image-import.md  TASK-M0-001-platform-packaging.md  TASK-M0-002-rapidocr-multilingual.md  TASK-M0-003-complex-script-layout.md  TASK-M0-004-lama-ecommerce.md  TASK-M0-005-text-box-layout.md  TASK-M0-006-curved-text.md  TASK-M0-007-batch-scheduler.md  TASK-M0-008-model-delivery.md  TASK-M1-001-product-skeleton.md  TASK-M1-002-image-io.md  TASK-M1-003-ocr.md  TASK-M1-004-translation-protection.md  TASK-M1-005-inpainting.md  TASK-M1-006-single-image-workflow.md  TASK-M2-001-editable-text-history.md  TASK-M2-002-canvas-geometry.md  TASK-M2-003-layer-style-management.md  TASK-M2-004-manual-region-workflow.md  TASK-M2-005-batch-scheduler.md  TASK-M2-006-batch-ui-export.md  TASK-M2-007-artistic-curved-text.md  TASK-M2-008-integration-stress.md  TASK-M3-001-server-foundation.md  TASK-M3-002-remote-image-limits.md  TASK-M3-003-translation-proxy.md  TASK-M3-004-model-delivery.md  TASK-M3-005-activation.md  TASK-M3-006-admin-integration.md  TASK-M4-001-desktop-activation.md  TASK-M4-002-release-build-ci.md  TASK-M4-003-platform-runtime.md  (+3 more)
(+265 files in other folders)
